isss_prospectus.scss
@import 'https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.0/semantic.min.css';
$background_color: #202020;
$event_color: #3399ff;
$event_header_color: #99ff33;
body {
	background: $background_color;
	color: white;
	font-family: "Trebuchet MS", Helvetica, sans-serif;
}
#header{
	padding-top: 1cm;
	font-weight: bold;
}

.headers{
	padding-left:1.75cm;
	margin-bottom: .75cm;
}
.main-text{
	img{
		float: right;
		margin: 10px 0px 45px 0px;
		max-height: 250px;
		max-width: 250px;
	}
	margin-right: 1cm;
	p{
		margin-top:20px;
		margin-left: 1.8cm;
	}
}


#Event-header{
	color: $event_color;
	text-align: center;
	margin-bottom: 20px;
}
/* Start of Column CSS */
.container2 {
	clear:left;
	float:left;
	width:100%;
	overflow:hidden;
}
.container1 {
	float:left;
	width:100%;
	position:relative;
	right:50%;
	padding-bottom: .5cm;
}
.col1 {
	float:left;
	width:40%;
	position:relative;
	left:52%;
	overflow:hidden;
	color: $event_header_color;
	text-align: center;
}
.col2 {
	float:left;
	width:46%;
	position:relative;
	left:56%;
	overflow:hidden;
}

